--- a/index.css
+++ b/index.css
@@ -16,8 +16,12 @@ margin-top: 4px;
 font-weight: bold;
 background-color: #5f9341;
 color: white;
-border: none;
+border: 2px solid #5f9341   ;
 
+}
+#delete-btn {
+    background-color: white;
+    color: #5f9341;
 }
 ul {
  list-style: none;
